--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,6 +1,5 @@
 .background{
-    /* background-image: url("paper.gif"); */
-    background-color: #cccccc;
+    background-image: linear-gradient(to right, rgb(156, 245, 163), rgb(231, 163, 151),rgb(173, 255, 179));;
 }
 
 .heading-color{
