font awesome icons updated

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #f3f5ef;
+  background-color: #ddfcdd;
   min-height: 100vh;
   /* font-size: calc(10px + 2vmin); */
   /* color: white; */
