--- a/src/component/District/District.css
+++ b/src/component/District/District.css
@@ -25,20 +25,17 @@
     font-weight: 700;
 }
 
-.fa-facebook-square{
+.fa-facebook-square:hover{
     color: #3b5998;
-    margin-right: 10px;
 }
-.fa-instagram{
+.fa-instagram:hover{
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     -webkit-background-clip: text;
             /* Also define standard property for compatibility */
             background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-left: 10px;
-    margin-right: 10px;
+
 }
-.fa-twitter{
+.fa-twitter:hover{
     color: #1DA1F2;
-    margin-left: 10px;
 }
