--- a/src/component/District/District.css
+++ b/src/component/District/District.css
@@ -17,7 +17,7 @@
     background-image: linear-gradient(to right, rgb(156, 245, 163), rgb(231, 163, 151),rgb(173, 255, 179));;
 }
 
-.icons{
+.train-icon{
     color: goldenrod;
 }
 .fab{
